--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
     <!DOCTYPE html>
-    <html lang="rus">
+    <html lang="uz">
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,6 +11,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&family=Open+Sans+Condensed:wght@700&family=Rubik:wght@400;500;700&display=swap" rel="stylesheet">
 
         <!-- STYLES -->
+        <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/styles.css">
 
     </head>
@@ -19,10 +20,9 @@
         <header>
             <div class="site-header">
                 <div class="site-header-container container">
-                    
-                    <div class="logo">
+                    <div class="site-header-logo">
                         <a href="index.html">
-                            <img src="img/NAMANGANLIKLAR 24.png" alt="Namanganliklar" width="276" height="45">
+                           <img src="img/NAMANGANLIKLAR24.svg" alt="logo" width="276" height="45">
                         </a>
                     </div>
 
@@ -40,10 +40,32 @@
                     <!-- FORM -->
 
                     <!-- TIL -->
+                    <div class="lang">
+                        <a class="lang-link lang-link-active" href="index.html">УЗ</a>
+                        <a class="lang-link" href="index.html/ru">РУ</a>
+                    </div>
 
                     <a class="main-link" href="#">Войти</a>
                 </div>
             </div>
+            <nav class="container">
+                <ul class="site-nav">
+                    <li class="site-nav-list"><a class="site-nav-item" href="#">Главное</a></li>
+                    <li class="site-nav-list"><a class="site-nav-item" href="#">Интересное</a></li>
+                    <li class="site-nav-list"><a class="site-nav-item" href="#">Экономика</a></li>
+                    <li class="site-nav-list"><a class="site-nav-item" href="#">Политика</a></li>
+                    <li class="site-nav-list"><a class="site-nav-item" href="#">Общество</a></li>
+                    <li class="site-nav-list"><a class="site-nav-item" href="#">Технологии</a></li>
+                    <li class="site-nav-list"><a class="site-nav-item" href="#">Спорт</a></li>
+                    <li class="site-nav-list"><a class="site-nav-item" href="#">Культура</a></li>
+                    <li class="site-nav-list"><a class="site-nav-item" href="#">Происшествия</a></li>
+                    <li class="site-nav-list"><a class="site-nav-item" href="#">Наука</a></li>
+                </ul>
+                <hr class="main-hr">
+                <a href="#">
+                    <img class="market-img" src="img/reklama.jpg" alt="Reklama" width="1200" height="128" srcset="img/reklama.jpg 1x, img/reklama@2x.jpg 2x">
+                </a>
+            </nav>
         </header>
         
     </body>
