--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
                     </div>
 
                     <!-- FORM -->
+                    <form class="search" action="https://echo.htmlacademy.ru" method="GET">
+                        <input class="search-input" type="search" name="search" placeholder="Поиск" aria-label="Поиск" required>
+                    </form>
 
                     <!-- TIL -->
                     <div class="lang">
