--- a/index.html
+++ b/index.html
@@ -65,9 +65,11 @@
                     <li class="site-nav-list"><a class="site-nav-item" href="#">Наука</a></li>
                 </ul>
                 <hr class="main-hr">
-                <a href="#">
-                    <img class="market-img" src="img/reklama.jpg" alt="Reklama" width="1200" height="128" srcset="img/reklama.jpg 1x, img/reklama@2x.jpg 2x">
-                </a>
+                <aside>
+                    <a class="market-link" href="https://olcha.uz" target="_blank">
+                        <img class="market-img" src="img/reklama.jpg" alt="Reklama" width="1200" height="128" srcset="img/reklama.jpg 1x, img/reklama@2x.jpg 2x">
+                    </a>
+                </aside>
             </nav>
         </header>
         
