--- a/index.html
+++ b/index.html
@@ -72,6 +72,86 @@
                 </aside>
             </nav>
         </header>
+
+        <main class="container">
+            <div class="article">
+                <article class="box">
+                    <h3 class="box-heading box-heading-one">Кандидат на пост канцлера ФРГ Шольц назвал условия коалиционного соглашения</h3>
+                    <p class="box-description box-description-one">Лидер Социал-демократической партии Германии (СДПГ) и кандидат на должность...</p>
+                    <img class="box-img" src="img/german.jpg" alt="german" width="359" height="165" srcset="img/german.jpg 1x, img/german@2x.jpg 2x">
+                    <div>
+                        <a href="#" target="_blank">
+                            <img class="box-logo" src="" alt="logo" width="20" height="20" srcset="">
+                        </a>
+                        <span class="box-span">ИА Красная Весна 15:55</span>
+                    </div>
+                </article>
+                <article class="box">
+                    <h3 class="box-heading box-heading-two">Ученые доказали экспериментальным путем пользу покровных культур</h3>
+                    <p class="box-description box-description-two">Новое исследование ученых университета Иллинойса объединяет полевые данные... </p>
+                    <img class="box-img" src="img/bugdoy.jpg" alt="bugdoy" width="360" height="165" srcset="img/bugdoy.jpg 1x, img/bugdoy@2x.jpg 2x">
+                    <div>
+                        <a href="#" target="_blank">
+                            <img class="box-logo" src="" alt="logo" width="20" height="20" srcset="">
+                        </a>
+                        <span class="box-span">Газета.Ru 12:54</span>
+                    </div>
+                </article>
+                <article class="box">
+                    <h3 class="box-heading box-heading-three">Baidu запустила публичный сервис роботакси Apollo Go в Шанхае</h3>
+                    <p class="box-description box-description-three">Автопарк Baidu состоит из модифицированных электромобилей EV... </p>
+                    <img class="box-img" src="img/moshin.jpg" alt="car" width="360" height="165" srcset="img/moshin.jpg 1x, img/moshin@2x.jpg 2x">
+                    <div>
+                        <a href="#" target="_blank">
+                            <img class="box-logo" src="" alt="logo" width="20" height="20" srcset="">
+                        </a>
+                        <span class="box-span">Хайтек+ 13:44</span>
+                    </div>
+                </article>
+                <article class="box">
+                    <h3 class="box-heading box-heading-four">Стали известны ёмкости аккумуляторов всех моделей iPhone 13</h3>
+                    <p class="box-description box-description-four">Во время презентации iPhone 13 Apple придала большое значения...</p>
+                    <img class="box-img" src="img/telefon.jpg" alt="phone" width="360" height="165" srcset="img/telefon.jpg 1x, img/telefon@2x.jpg 2x">
+                    <div>
+                        <a href="#" target="_blank">
+                            <img class="box-logo" src="" alt="logo" width="20" height="20" srcset="">
+                        </a>
+                        <span class="box-span">Digger.ru 14:25</span>
+                    </div>
+                </article>
+                <article class="box">
+                    <h3 class="box-heading box-heading-five">Nature: ученые смогли доказать природное происхождение коронавируса SARS-CoV-2</h3>
+                    <p class="box-description box-description-five">Во время презентации iPhone 13 Apple придала большое значение...</p>
+                    <img class="box-img" src="img/doktor.jpg" alt="doctor" width="360" height="165" srcset="img/doktor.jpg 1x, img/doktor@2x.jpg 2x">
+                    <div>
+                        <a href="#" target="_blank">
+                            <img class="box-logo" src="" alt="logo" width="20" height="20" srcset="">
+                        </a>
+                        <span class="box-span">Lenta.ru 10:54</span>
+                    </div>
+                </article>
+                <article class="box">
+                    <h3 class="box-heading box-heading-six">Китайская марка JAC повысила цены на лифтбек и пикап в России</h3>
+                    <p class="box-description box-description-six">Две модели китайского бренда JAC из пяти, представленных на российском...</p>
+                    <img class="box-img" src="img/bmw.jpg" alt="bmw" width="360" height="165" srcset="img/bmw.jpg 1x, img/bmw@2x.jpg 2x">
+                    <div>
+                        <a href="#" target="_blank">
+                            <img class="box-logo" src="" alt="logo" width="20" height="20" srcset="">
+                        </a>
+                        <span class="box-span">Тарантас Ньюс 10:44</span>
+                    </div>
+                </article>
+            </div>
+
+            <div class="notification">
+                <h3 class="notification-heading">Хотите быть в курсе свежих новостей? Включите уведомления!</h3>
+                <a class="notification-link" href="#">Включит</a>
+            </div>
+
+
+
+
+        </main>
         
     </body>
     </html>
