Change font-weight class-money

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
                     </div>
                     
                     <div class="money">
-                        <div class="moneys">
+                        <div class="moneys moneys-one">
                             <span class="mark">$</span>
                             <span class="monet">10890.9</span>
                         </div>
-                        <div class="moneys">
+                        <div class="moneys moneys-two">
                             <span class="mark">P</span>
                             <span class="monet">129.9</span>
                         </div>
