--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <!-- TIL -->
                     <div class="lang">
                         <a class="lang-link lang-link-active" href="index.html">УЗ</a>
-                        <a class="lang-link" href="index.html/ru">РУ</a>
+                        <a class="lang-link lang-link-ru" href="index.html/ru">РУ</a>
                     </div>
                     
                     <a class="main-link" href="#">Войти</a>
