Change link footer-list

--- a/index.html
+++ b/index.html
@@ -313,19 +313,19 @@
                 <div class="site-footer-bottom">
                     <h2 class="site-footer-end">Наши социальные сети</h2>
                     <ul class="footer-list">
-                        <li class="footer-link"><a href="https://" target="_blank">
+                        <li class="footer-link"><a href="#" target="_blank">
                             <img class="link-logo" src="img/facebook.svg" alt="facebook" width="25" height="25">
                         </a>
                     </li>
-                    <li class="footer-link"><a href="https://" target="_blank">
+                    <li class="footer-link"><a href="#" target="_blank">
                         <img class="link-logo" src="img/insta.svg" alt="instagram" width="25" height="25">
                     </a>
                 </li>
-                <li class="footer-link"><a href="https://https://" target="_blank">
+                <li class="footer-link"><a href="#" target="_blank">
                     <img class="link-logo" src="img/telegram.svg" alt="telegram" width="25" height="25">
                     </a>
                 </li>
-                <li class="footer-link"><a href="https://https://" target="_blank">
+                <li class="footer-link"><a href="#" target="_blank">
                     <img class="link-logo" src="img/youtobe.svg" alt="youtobe" width="25" height="25">
                     </a>
                 </li>
