--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                                 </div>
                             </div>
                         </article>
-                        <a class="box-bottom-link" href="#">Показать ещё</a>
+                        <a class="box-bottom-link" href="list.html">Показать ещё</a>
                     </section>
 
                     <!-- BOX-BOTTOM-RIGHT -->
