Change aside padding

--- a/list.html
+++ b/list.html
@@ -65,7 +65,7 @@
                     <li class="site-nav-list"><a class="site-nav-item" href="#">Наука</a></li>
                 </ul>
 
-                <aside class="market">
+                <aside class="market market-list">
                     <a class="market-link" href="https://olcha.uz" target="_blank">
                         <img class="market-img" src="img/yangi-uylar.jpg" alt="Reklama" width="1200" height="128" srcset="img/yangi-uylar.jpg 1x, img/yangi-uylar.jpg@2x.jpg 2x">
                     </a>
