Add connect contact.html to index.html

--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
                     <nav class="site-footer-link">
                         <ul>
                             <li class="site-footer-link-items"><a href="#">Информация о сайте</a></li>
-                            <li class="site-footer-link-items"><a href="#">Напишите нам</a></li>
+                            <li class="site-footer-link-items"><a href="contact.html">Напишите нам</a></li>
                             <li class="site-footer-link-items"><a href="#">Реклама</a></li>
                             <li class="site-footer-link-items"><a href="#">Прислать новость</a></li>
                         </ul>
