Add link connect pages

--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
         </div>
         <nav class="container">
             <ul class="site-nav">
-                <li class="site-nav-list"><a class="site-nav-item" href="#">Главное</a></li>
+                <li class="site-nav-list"><a class="site-nav-item" href="index.html">Главное</a></li>
                 <li class="site-nav-list"><a class="site-nav-item" href="#">Интересное</a></li>
                 <li class="site-nav-list"><a class="site-nav-item" href="#">Экономика</a></li>
                 <li class="site-nav-list"><a class="site-nav-item" href="#">Политика</a></li>
@@ -76,17 +76,11 @@
                     <div class="top-form">
                         <form class="name" action="https://echo.htmlacademy.ru" method="GET">
                             <input class="input name-input" type="search" name="search" placeholder="Имя" aria-label="Поиск" required>
-                        </form>
-                        <form class="telephone" action="https://echo.htmlacademy.ru" method="GET">
                             <input class="input telephone-input" type="search" name="search" placeholder="Номер телефона" aria-label="Поиск" required>
+                            <input class="input e-mail-input" type="search" name="search" placeholder="Электронная почта" aria-label="Поиск" required>
+                            <input class="input text-form-input" type="search" name="search" placeholder="Текст" aria-label="Поиск" required>
                         </form>
                     </div>
-                    <form class="e-mail" action="https://echo.htmlacademy.ru" method="GET">
-                        <input class="input e-mail-input" type="search" name="search" placeholder="Электронная почта" aria-label="Поиск" required>
-                    </form>
-                    <form class="text-form" action="https://echo.htmlacademy.ru" method="GET">
-                        <input class="input text-form-input" type="search" name="search" placeholder="Текст" aria-label="Поиск" required>
-                    </form>
                     <button class="contact-button" type="button">Отправить</button>
                 </div>
                 <!-- CONTACT -->
@@ -124,7 +118,7 @@
                 <nav class="site-footer-link">
                     <ul>
                         <li class="site-footer-link-items"><a href="#">Информация о сайте</a></li>
-                        <li class="site-footer-link-items"><a href="#">Напишите нам</a></li>
+                        <li class="site-footer-link-items"><a href="contact.html">Напишите нам</a></li>
                         <li class="site-footer-link-items"><a href="#">Реклама</a></li>
                         <li class="site-footer-link-items"><a href="#">Прислать новость</a></li>
                     </ul>
