--- a/article.html
+++ b/article.html
@@ -177,8 +177,8 @@
             </div>
 
         </main>
-         <!-- FOOTER -->
-         <footer>
+        <!-- FOOTER -->
+        <footer>
             
             <div class="container container-footer">
                 <div class="main-logo-footer">
@@ -192,7 +192,7 @@
                     <nav class="site-footer-link">
                         <ul>
                             <li class="site-footer-link-items"><a href="#">Информация о сайте</a></li>
-                            <li class="site-footer-link-items"><a href="#">Напишите нам</a></li>
+                            <li class="site-footer-link-items"><a href="contact.html">Напишите нам</a></li>
                             <li class="site-footer-link-items"><a href="#">Реклама</a></li>
                             <li class="site-footer-link-items"><a href="#">Прислать новость</a></li>
                         </ul>
