--- a/list.html
+++ b/list.html
@@ -11,8 +11,9 @@
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&family=Open+Sans+Condensed:wght@700&family=Rubik:wght@400;500;700&display=swap" rel="stylesheet">
         
         <!-- STYLES -->
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/styles.css">
+        <!-- <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="css/styles.css"> -->
+        <link rel="stylesheet" href="css/styles.mini.css">
         
     </head>
     <body>
