Add new heigtht img to list.html and add new minify.css

--- a/list.html
+++ b/list.html
@@ -66,7 +66,7 @@
                     <li class="site-nav-list"><a class="site-nav-item" href="#">Наука</a></li>
                 </ul>
 
-                <aside class="market market-list">
+                <aside class="market">
                     <a class="market-link" href="https://olcha.uz" target="_blank">
                         <img class="market-img" src="img/yangi-uylar.jpg" alt="Reklama" width="1200" height="128" srcset="img/yangi-uylar.jpg 1x, img/yangi-uylar.jpg@2x.jpg 2x">
                     </a>
@@ -76,9 +76,9 @@
         <!-- MAIN -->
 
         <main class="main-content container">
+            <h2 class="box-bottom-left-heading">Интересное</h2>
             <div class="main-bottom">
                 <section class="box-bottom-left">
-                    <h2 class="box-bottom-left-heading">Интересное</h2>
                     <article class="box box-bottom">
                         <img class="box-img-bottom" src="img/parlament.jpg" alt="Отопление Ташкента на 30 лет переходит в управление французской Veolia" width="210" height="165" srcset="img/parlament.jpg 1x, img/parlament.jpg 2x">
                         <div class="box-text">
@@ -245,13 +245,13 @@
                     </section>
 
                     <a href="#">
-                        <img class="box-bottom-right-img box-bottom-right-img-list" src="img/reklama3.jpg" alt="reklama" width="393" height="553" srcset="img/reklama3.jpg 1x, img/reklama3@2x.jpg 2x">
+                        <img class="box-bottom-right-img box-bottom-right-img-list" src="img/olmos.jpg" alt="reklama" width="393" height="553" srcset="img/olmos.jpg 1x, img/olmos@2x.jpg 2x">
                     </a>
                 </div>
             </div>
         </main>
-         <!-- FOOTER -->
-         <footer>
+        <!-- FOOTER -->
+        <footer>
             
             <div class="container container-footer">
                 <div class="main-logo-footer">
