--- a/contact.html
+++ b/contact.html
@@ -48,21 +48,21 @@
                     <a class="lang-link lang-link-ru" href="index.html/ru">РУ</a>
                 </div>
                 
-                <a class="main-link" href="#">Войти</a>
+                <a class="main-link" href="list.html">Войти</a>
             </div>
         </div>
         <nav class="container">
             <ul class="site-nav">
                 <li class="site-nav-list"><a class="site-nav-item" href="index.html">Главное</a></li>
-                <li class="site-nav-list"><a class="site-nav-item" href="#">Интересное</a></li>
-                <li class="site-nav-list"><a class="site-nav-item" href="#">Экономика</a></li>
-                <li class="site-nav-list"><a class="site-nav-item" href="#">Политика</a></li>
-                <li class="site-nav-list"><a class="site-nav-item" href="#">Общество</a></li>
-                <li class="site-nav-list"><a class="site-nav-item" href="#">Технологии</a></li>
-                <li class="site-nav-list"><a class="site-nav-item" href="#">Спорт</a></li>
-                <li class="site-nav-list"><a class="site-nav-item" href="#">Культура</a></li>
-                <li class="site-nav-list"><a class="site-nav-item" href="#">Происшествия</a></li>
-                <li class="site-nav-list"><a class="site-nav-item" href="#">Наука</a></li>
+                <li class="site-nav-list"><a class="site-nav-item" href="list.html">Интересное</a></li>
+                <li class="site-nav-list"><a class="site-nav-item" href="list.html">Экономика</a></li>
+                <li class="site-nav-list"><a class="site-nav-item" href="list.html">Политика</a></li>
+                <li class="site-nav-list"><a class="site-nav-item" href="list.html">Общество</a></li>
+                <li class="site-nav-list"><a class="site-nav-item" href="list.html">Технологии</a></li>
+                <li class="site-nav-list"><a class="site-nav-item" href="list.html">Спорт</a></li>
+                <li class="site-nav-list"><a class="site-nav-item" href="list.html">Культура</a></li>
+                <li class="site-nav-list"><a class="site-nav-item" href="list.html">Происшествия</a></li>
+                <li class="site-nav-list"><a class="site-nav-item" href="list.html">Наука</a></li>
             </ul>
         </nav>
     </header>
@@ -132,7 +132,7 @@
                     </ul>
                     <ul>
                         <li class="site-footer-link-items"><a href="#">Использование материалов</a></li>
-                        <li class="site-footer-link-items"><a href="#">Темы дня</a></li>
+                        <li class="site-footer-link-items"><a href="list.html">Темы дня</a></li>
                         <li class="site-footer-link-items"><a href="#">Наша команда</a></li>
                     </ul>
                 </nav>
